# shc_tiles

./: .gitignore  Cargo.toml  README.md  rust-toolchain.toml
.cargo/: config.toml
examples/: atlas_builder.rs  scene.rs
src/: lib.rs  plugin.rs
src/atlas/: mod.rs  plugin.rs  slot.rs
src/atlas/builder/: mod.rs  queue.rs  tile_set_settings.rs
src/atlas/builder/downsample/: bilinear_srgb.rs  mod.rs
src/dense/: builder.rs  data.rs  info.rs  mod.rs
src/dense/render/: command.rs  extract.rs  mod.rs  pipeline.rs  prepare_bind_group.rs  prepare_buffers.rs  queue.rs  shader_tile_grid_dense.wgsl
src/shared/: atlas.wgsl  mod.rs  tile_grid.wgsl  tile_grid_animator.rs  util.wgsl
src/sparse/: builder.rs  mod.rs  value.rs
src/sparse/render/: command.rs  extract.rs  mod.rs  pipeline.rs  prepare_bind_group.rs  prepare_buffers.rs  queue.rs  shader_tile_grid_sparse.wgsl
